@@ -4,6 +4,8 @@
 -revise font render.
 -update surface blit for rect arg.
 -add sprite group alias.
+-revise surface setpixel.
+-revise color arg processing.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
